# nn

./: cabal.project  flake.nix
micrograd/: Journal.md  micrograd.cabal
micrograd/app/: Main.hs  Value.hs
